pom文件依赖完善

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,16 +13,16 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 dubbo.application.name=dubbo-monitor
-dubbo.application.owner=
-dubbo.registry.address=zookeeper://127.0.0.1:2181
-dubbo.protocol.port=6060
+dubbo.application.owner=yingjun_monitor
+dubbo.registry.address=zookeeper://120.27.141.45:2181
+dubbo.protocol.port=20870
 
 # Database Settings
 db.url=jdbc:mysql://127.0.0.1:3306/monitor?prepStmtCacheSize=517&cachePrepStmts=true&autoReconnect=true&characterEncoding=utf-8
 db.username=root
-db.password=root
+db.password=yingjun
 db.maxActive=500
 
 # System Manager
 manager.username=admin
-manager.password=admin
+manager.password=yingjun
